Display error message on each plot when filters missing
Plot includes overall type of filters missing (e.g. both cell type and interaction)

--- a/public/viz.html
+++ b/public/viz.html
@@ -873,6 +873,7 @@ function refreshCCISummaryChordPlots() {
 
               <!---Cell-Cell Communication Search Display-->
               <div id="cci-search" class="col s9 cci-display">
+                <div id="cci-search-error"></div>
                 <span id="cci_search_title" hidden>Cell-cell Communication - Search</span>
                 <div id="cci_search_spinner" class="container center">
                   <div class="preloader-wrapper active center">
@@ -928,6 +929,7 @@ function refreshCCISummaryChordPlots() {
 
               <!--Single Gene Expression Display-->
               <div id="single-gene-expr" class="col s9 cci-display">
+                <div id="single-gene-expr-error"></div>
                 <span id="sge_title" hidden>Single gene expression</span>
                 <div>
                   <div id="sge_spinner" class="container center" hidden>
