--- a/public/viz.html
+++ b/public/viz.html
@@ -911,6 +911,7 @@ function refreshCCISummaryChordPlots() {
               <div class="col s0 m3 l3"></div>
               <!--Plot 1: cell type composition-->
               <div id="input-cell-composition" class="input-display col s12 m6 l6">
+                <span id="ctcomp-missing" hidden></span>
                 <span id="ctcomp_title" hidden>Cell composition</span>
                 <button id="ctcomp_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn" onclick="downloadAsPDF('ctcomp','ctcomp_title','ctcomp_header')">
                     <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
@@ -925,6 +926,7 @@ function refreshCCISummaryChordPlots() {
 
               <!--Plot 2: Spatial microenvironments-->
               <div id="input-spatial-micro" class="input-display col s12 m6 l6">
+                <span id="spme-missing" hidden></span>
                 <span id="spme_title" hidden>Spatial microenvironments</span>
                 <button id="spme_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2 input-conf-btn" onclick="downloadAsPDF('spme','spme_title','spme_header')">
                     <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
